<resources>
    <string name="prompt_email"></string>
    <string name="prompt_password"></string>
    <string name="action_sign_in_short"></string>
    <string name="action_sign_in"></string>

    <string name="app_name">RideSharing</string>
    <string name="frag_auth">Authentication</string>
    <string name="frag_reg">Registration</string>
    <string name="text_email">Email</string>
    <string name="text_name">Name</string>
    <string name="text_phone">Phone number</string>
    <string name="text_all_fields">All fields are required</string>
    <string name="text_password">Password</string>
    <string name="text_password_confirm">Confirm Password</string>
    <string name="text_check_remember">remember me</string>
    <string name="text_btn_login">Login</string>
    <string name="text_btn_reg">Registration</string>
    <string name="text_btn_auth">cancel</string>
    <string name="frag_register">Registration</string>
    <string name="text_reg_first">Have no account?</string>
    <string name="text_reg_second">Register it now!</string>
    <string name="text_continue">Continue</string>
    <string name="text_booking">Book your place</string>
    <string name="text_change_profile_info">Change your information</string>
    <string name="text_fromwhere">Where we go?</string>
    <string name="text_how_peoples">How many people can you pick up?</string>
    <string name="text_when">When will you go?</string>
    <string name="text_price">How much will a seat in your car cost?</string>
    <string name="text_your_avatar">Your avatar</string>
    <string name="text_your_name">Your name</string>
    <string name="text_your_phone">Your phone</string>
    <string name="text_your_passport">Your passport</string>
    <string name="text_your_email">Your email</string>
    <string name="text_another_name">Name</string>
    <string name="text_another_phone">Phone</string>
    <string name="text_another_passport">Passport</string>
    <string name="text_another_email">Email</string>
    <string name="text_passport_verified">User passport confirmed</string>
    <string name="text_passpor_not_verified">User passport is not confirmed</string>
    <string name="text_comment">Want to leave a comment for a fellow?</string>
    <string name="text_details">And a few more details</string>
    <string name="text_music">Will you go with music?</string>
    <string name="text_pets">Companion can take a pets</string>
    <string name="text_talk">Are you talkative?</string>
    <string name="text_smoking">Сan smoke in the car?</string>
    <string name="no_trips">So far there are no trips</string>
    <string name="no_chats">You have not dialogs yet</string>
    <string name="no_your_publications">You haven\'t posted anything yet</string>

    <string name="toast_invalid_data">There were problems with the entrance, please check the correctness of the entered data</string>
    <string name="toast_empty_data">You did not fill in all required fields!</string>
    <string name="toast_password_valid">The entered passwords do not match</string>
    <string name="toast_phone_valid">The entered phone has not valid value</string>
    <string name="toast_your_seat_is_reserved">Your seat is reserved. Check your dialogues.</string>

    <string name="field_from">From</string>
    <string name="field_to">To</string>
    <string name="field_date">Date to go</string>
    <string name="field_time">Time of departure</string>
    <string name="field_price">Price of a seat</string>
    <string name="field_comment">Comment for traveler</string>
    <string name="field_hours">Hours</string>
    <string name="field_minutes">Minutes</string>

    <string name="text_invalid_date">You must select a date no earlier than the current one!</string>

    <string name="menu_search">search</string>
    <string name="menu_publish">publish</string>
    <string name="menu_your_trips">trips</string>
    <string name="menu_chat">chat</string>
    <string name="menu_profile">profile</string>

    <string name="fragment_search_search">Search trip</string>
    <string name="fragment_search_result">Here is what we found for your request</string>
    <string name="fragment_search_from">From</string>
    <string name="fragment_search_to">To</string>
    <string name="fragment_search_count_peoples">How many people are traveling?</string>
    <string name="fragment_search_pick_up">Pick up fellow travelers</string>
    <string name="fragment_search_date">When do you want to travel?</string>
    <string name="fragment_search_map">Everyone on the way!</string>

    <string name="fragment_search_map_map">Check out the offers on the map!</string>

    <string name="fragment_publish_publish">If you are going somewhere, post your ad here</string>
    <string name="fragment_publish_button">I\'m going!</string>
    <string name="fragment_publish_your_publications">There is your publications</string>

    <string name="fragment_publish_publish_main">Let\'s clarify some details</string>
    <string name="fragment_search_result_order">Trip details</string>
    <string name="fragment_trips_your_trips">Your trips</string>
    <string name="fragment_home_profile_edit">Edit your information</string>
    <string name="fragment_chat_profile_check">Your interlocutor</string>
    <string name="fragment_chat_chat">Chat with a fellow traveler</string>
    <string name="fragment_profile_profile">Your Profile</string>


</resources>