<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/textHeader"
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/fragment_publish_publish" />

        <Button
            android:id="@+id/btnToPublishMain"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/fragment_publish_button"
            style="@style/textRegularBtnFill"
            />

        <TextView
            android:id="@+id/emptyPublicationsTV"
            style="@style/textRegular"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/no_your_publications" />

        <androidx.cardview.widget.CardView
            android:id="@+id/noPublicationsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="100dp"
            android:layout_margin="10dp"
            android:outlineSpotShadowColor="@color/white"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/white">
            <ImageView
                android:id="@+id/emptyTrips"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:scaleX="1.1"
                android:scaleY="1.1"
                card_view:srcCompat="@drawable/empty_publications"/>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerYourPublications"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>