<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewShape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="15dp"
            android:textSize="30dp"
            android:text="@string/fragment_search_search" />

        <androidx.cardview.widget.CardView
            android:id="@+id/searchCardMain"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="40dp"
            card_view:cardElevation="20dp"
            android:outlineSpotShadowColor="@color/semi_dark"
            android:alpha="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldFrom"
                    android:layout_width="match_parent"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_search_from"
                    app:startIconDrawable="@drawable/ic_baseline_join_left_24"
                    app:boxStrokeWidth="0dp"
                    app:boxBackgroundColor="@color/main_semi_color"
                    app:boxCornerRadiusBottomEnd="40dp"
                    app:boxCornerRadiusBottomStart="40dp"
                    app:boxCornerRadiusTopEnd="40dp"
                    app:boxCornerRadiusTopStart="40dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/light_dark"
                        android:fontFamily="sans-serif-black"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldTo"
                    android:layout_width="match_parent"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_search_to"
                    app:startIconDrawable="@drawable/ic_baseline_join_right_24"
                    app:boxBackgroundColor="@color/main_semi_color"
                    app:boxStrokeWidth="0dp"
                    app:boxCornerRadiusBottomEnd="40dp"
                    app:boxCornerRadiusBottomStart="40dp"
                    app:boxCornerRadiusTopEnd="40dp"
                    app:boxCornerRadiusTopStart="40dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/light_dark"
                        android:fontFamily="sans-serif-black"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textViewCountPeople"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="20dp"
                    android:textSize="15dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="bottom"
                    android:text="@string/fragment_search_count_peoples" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <Button
                        android:id="@+id/buttonMinus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-black"
                        android:text="-" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outlinedTextField"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:gravity="center"
                        app:startIconDrawable="@drawable/ic_baseline_person_4_24"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeWidth="0dp"
                        app:boxCornerRadiusBottomEnd="40dp"
                        app:boxCornerRadiusBottomStart="40dp"
                        app:boxCornerRadiusTopEnd="40dp"
                        app:boxCornerRadiusTopStart="40dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:fontFamily="sans-serif-black"
                            android:gravity="center"
                            android:text="1"
                            android:textColor="@color/light_dark"
                            android:textSize="20sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/buttonPlus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-black"
                        android:text="+" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textViewWhen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="20dp"
                    android:textSize="15dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="bottom"
                    android:text="@string/fragment_search_date" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldDate"
                    android:layout_width="match_parent"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_baseline_date_range_24"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeWidth="0dp"
                    app:boxCornerRadiusBottomEnd="40dp"
                    app:boxCornerRadiusBottomStart="40dp"
                    app:boxCornerRadiusTopEnd="40dp"
                    app:boxCornerRadiusTopStart="40dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/light_dark"
                        android:fontFamily="sans-serif-black"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/checkBoxPickUp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/light_dark"
                    android:text="@string/fragment_search_pick_up" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/searchCardMaps"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="40dp"
            card_view:cardElevation="20dp"
            android:outlineSpotShadowColor="@color/semi_dark"
            android:alpha="1.0">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleY="2.2"
                    android:scaleX="2.2"
                    card_view:srcCompat="@drawable/map_review" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:text="@string/fragment_search_map" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>